# financial_data_analyst

./: .gitignore  pyproject.toml
financial_data_analyst/: run.py  schemas.py
financial_data_analyst/configs/: deployment.json
